--- a/Projektas/public/css/welcome.css
+++ b/Projektas/public/css/welcome.css
@@ -18,25 +18,50 @@ body::after {
     background-position: center;
     background-size: cover;
 }
+
+.header{
+    font:bold;
+    right: 990px;
+}
+
 .login{
-    width: 220px;
+    width: 700px;
     position: fixed;
     bottom: 280px;
     right: 200px;
-    height: 10em;
+    top: 140px;
+    height: 15em;
     width: 235px;
-    font-size: large;
+    font-size: 1.8em;
 }
 
 #password{
-    size: 100px;
+    height: 2em;
+    width: 235px;
+    border: black solid 1px;
 }
 
 #email{
-    height: 20px;
+    height: 2em;
+    width: 235px;
+    border: black solid 1px;
 }
 
-.btn btn-primary{
-    height: 20px;
+#button{
+    height: 2em;
+    width: 5em;
+    background-color: rgb(0, 0, 255);
+    border: black 1px solid;
 }
 
+.form-check-label{
+    font-size: 0.6em;
+}
+
+#forgot{
+    font-size: 0.6em;
+}
+
+#forgot:hover{
+    color: blue;
+} 
