--- a/Projektas/public/css/app.css
+++ b/Projektas/public/css/app.css
@@ -5,5 +5,82 @@ html, body {
 }
 
 body{
-    background-color: grey;
+    background: rgb(255,255,255);
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(159,159,159,1) 49%, rgba(157,157,157,1) 100%);
+    text-align: center;
 }
+
+.navbar-brand{
+    font-size: 2em;
+    position: auto;
+    text-decoration: none;
+}
+
+.navbar-brand:visited{
+    color: black;
+}
+
+.nav-item{
+    list-style-type: none;
+    justify-content: right;
+    align-items: right;
+}
+
+.nav-link{
+    text-decoration: none;
+    color:black;
+    justify-content: right;
+    align-items: right;
+}
+
+.nav-link:hover{
+    color: blue;
+}
+
+.login{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 1.8em;
+}
+
+#password{
+    height: 2em;
+    width: 235px;
+    border: black solid 1px;
+    border-radius: 5px;
+}
+
+#input{
+    height: 1.5em;
+    width: 235px;
+    border: black solid 1px;
+    border-radius: 5px;
+}
+
+#button{
+    margin: 10px;
+    height: 2em;
+    width: 5em;
+    background-color: white;
+    border: black 1px solid;
+}
+
+#button:hover{
+    background-color: lightgrey;
+}
+
+.form-check-label{
+    font-size: 1em;
+}
+
+#forgot{
+    font-size: 1em;
+    text-decoration: none;
+    color: blue;
+}
+
+#forgot:hover{
+    color: purple;
+} 
