--- a/Projektas/public/css/welcome.css
+++ b/Projektas/public/css/welcome.css
@@ -25,13 +25,10 @@ body::after {
 }
 
 .login{
-    width: 700px;
-    position: fixed;
-    bottom: 280px;
-    right: 200px;
-    top: 140px;
-    height: 15em;
-    width: 235px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
     font-size: 1.8em;
 }
 
@@ -39,19 +36,25 @@ body::after {
     height: 2em;
     width: 235px;
     border: black solid 1px;
+    border-radius: 5px;
 }
 
 #email{
     height: 2em;
     width: 235px;
     border: black solid 1px;
+    border-radius: 5px;
 }
 
 #button{
     height: 2em;
     width: 5em;
-    background-color: rgb(0, 0, 255);
+    background-color: white;
     border: black 1px solid;
+}
+
+#button:hover{
+    background-color: lightblue;
 }
 
 .form-check-label{
