--- a/Projektas/public/css/app.css
+++ b/Projektas/public/css/app.css
@@ -1,13 +1,22 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 90%;
 }
-
-body{
-    background: rgb(255,255,255);
-    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(159,159,159,1) 49%, rgba(157,157,157,1) 100%);
-    text-align: center;
+  
+body::after {
+    content: "";
+    background: url('../images/HOME.jpg');
+    opacity: 0.5;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1; 
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .navbar-brand{
@@ -20,10 +29,10 @@ body{
     color: black;
 }
 
-.nav-item{
+.nav-link{
     list-style-type: none;
-    justify-content: right;
-    align-items: right;
+    justify-content: left;
+    align-items: left;
 }
 
 .nav-link{
