--- a/Projektas/public/css/app.css
+++ b/Projektas/public/css/app.css
@@ -93,3 +93,25 @@ body::after {
 #forgot:hover{
     color: purple;
 } 
+
+#logout{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    margin: auto;
+    padding: 5px;
+    border: 1px solid black;
+    background-color: white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#logout:hover{
+    background-color: lightblue;
+}
+
+#logout:visited{
+    color: black;
+}
